DATA BASE UPDATED
@Mathiruby96 @NaseerNashath

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Tailor_Shop_Management_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlite-jdbc-3.7.2.jar=C:\\Program Files\\DB Browser for SQLite\\connect\\sqlite-jdbc-3.7.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
