--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-Compile.on.save=true
-User.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+compile.on.save=true
+user.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
