--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=true
-annotation.processing.processors.list=fales
+annotation.processing.processor.options=
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.dir}/classes
@@ -34,7 +34,7 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=true
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
@@ -46,7 +46,7 @@ javac.test.classpath=\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=true
+javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
@@ -71,7 +71,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:\
+    ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
